--- a/angular.json
+++ b/angular.json
@@ -23,7 +23,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "node_modules/material-icons/iconfont/material-icons.css",
+              "src/styles.scss"
             ],
             "scripts": [],
             "es5BrowserSupport": true
