--- a/package.json
+++ b/package.json
@@ -12,19 +12,21 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^7.2.15",
-    "@angular/cdk": "^8.1.2",
+    "@angular/cdk": "^7.3.3",
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
     "@angular/core": "~7.2.0",
-    "@angular/flex-layout": "^8.0.0-beta.26",
+    "@angular/flex-layout": "^7.0.0-beta.23",
     "@angular/forms": "~7.2.0",
-    "@angular/material": "^8.1.2",
+    "@angular/material": "^7.3.3",
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
-    "angular-highcharts": "^8.0.3",
+    "classlist.js": "^1.1.20150312",
     "core-js": "^2.5.4",
     "highcharts": "^7.1.2",
+    "highcharts-angular": "^2.4.0",
+    "material-icons": "^0.3.1",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
