--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "highcharts": "^7.1.2",
     "highcharts-angular": "^2.4.0",
     "material-icons": "^0.3.1",
+    "node-sass": "^4.14.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
